Fix header padding to align all items in DOM

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #994F00;
-  padding-left: 8px;
+  /* padding-left: 8px; */
   color:snow;
   margin: 0;
   width: 100vw;
